--- a/style.css
+++ b/style.css
@@ -449,5 +449,33 @@ nav ul li a:hover {
         visibility: hidden;
     }
 
+    .thred-section {
+        width: 100%;
+        height: 100%;
+        /* background-color: #e9a12b; */
+        display: flex;
+        justify-content: space-evenly;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 100px 0;
+        flex-direction: column;
+    }
+
+    .about-first h1{
+        font-size: 2rem;
+           width: 200px;
+    }
+
+    .about-first p{
+        width: 100vw;
+        padding: 10px ;
+        font-size: 1.1rem;
+    }
+
+    .about-second{
+        width: 100%;
+    }
+
 
 }
